Issue #1 - Documenting How to Set Up Dev Environment